# st_score

./: .gitignore  README.md  analyzer.py  app.py  cliff.toml  database.py  entrypoint.macos.app.spec  entrypoint.onefile.spec  entrypoint.py  entrypoint.pyinstaller.onefile.spec  entrypoint.pyinstaller.spec  entrypoint.spec  pyproject.toml  requirements.txt  requirements_streamlit.txt  run_app.py  student_scores.db
.github/workflows/: build-pyinstaller.yml  build-release-optimized.yml  build-release.yml  build-windows-exe-old.yml  build-windows-exe.yml
.streamlit/: config.toml
build_assets/: generate_tauri_icons.py  icon.icns  make_icon.py  universal_icon_generator.py  universal_icon_generator_ascii.py
config/: color_settings.json
docs/: BUILD_OPTIONS.md  WORKFLOW_GUIDE.md
hooks/: hook-streamlit.py
pages/: color_settings.py  data_history.py  data_import.py  exam_analysis.py
tauri/: index.html  package.json  vite.config.ts
tauri/public/: splashscreen.html  styles.css
tauri/src/: main.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs
webapp/: app.py  config.py  database.py  student_scores.db  styles.py
webapp/pages/: __init__.py  data_history.py  data_import.py  exam_analysis.py
