[project]
name = "student-score-analyzer"
version = "0.1.0"
description = "Desktop application for student score analysis"
authors = [
    {name = "Student Score Analyzer Team"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6.0.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0.0",
]
