[project]
name = "student-score-analyzer"
version = "0.1.0"
description = "Desktop application for student score analysis"
authors = [
    {name = "Student Score Analyzer Team"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    "numpy>=1.21.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
build = [
    "git-cliff>=2.8.0",
    "pyinstaller>=6.13.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
